--- a/index.html
+++ b/index.html
@@ -11,12 +11,32 @@
             <p>ayinn</p>
             <img src="images/art2.jpg" alt="img1" width="250">
             <img src="images/art3.jpg" alt="img2" width="250">
-            <a href="index.html">index</a>
-            <a href="about.html">about</a>
-            <a href="pages/single/data.html">data</a>
-            <a href="pages/pro.html">product
-            
-            </a>
+           <div><a href="index.html">index</a></div> 
+            <div><a href="about.html">about</a></div>
+            <div><a href="pages/single/data.html">data</a></div>
+            <div><a href="pages/pro.html">product</a></div>
+            <div><a href="about.html" target="_blank">click here</a></div>
+
+
+        <ol type="1">
+            <li>images</li>
+            <ol type="A">
+                <li>123</li>
+                <li>abc</li>
+            </ol>
+            <li>pages</li>
+            <li>links</li>
+        </ol>
+
+        <ul type="circle" ></ul>
+        <li>images</li>
+        <ul type="square">
+            <li>abc</li>
+            <li>123</li>
+        </ul>
+            <li>pages</li>
+            <li>links</li>
+
         </body>
    
 </html>
