--- a/pages/pro.html
+++ b/pages/pro.html
@@ -13,6 +13,6 @@
             <a href="../index.html">index</a>
             <a href="../about.html">about</a>
             <a href="./single/data.html">data</a>
-            <a href="../pages/pro.html">product
+            <a href="../pages/pro.html">product</a>
         </body>
 </html>
