--- a/about.html
+++ b/about.html
@@ -14,6 +14,6 @@
             <a href="index.html">index</a>
             <a href="about.html">about</a>
             <a href="pages/single/data.html">data</a>
-            <a href="pages/pro.html">product
+            <a href="pages/pro.html">product</a>
         </body>
 </html>
