--- a/pages/single/data.html
+++ b/pages/single/data.html
@@ -13,6 +13,6 @@
             <a href="../../index.html">index</a>
             <a href="../../about.html">about</a>
             <a href="../single/data.html">data</a>
-            <a href="../pro.html">product
+            <a href="../pro.html">product</a>
         </body>
 </html>
