--- a/pages/css.html
+++ b/pages/css.html
@@ -10,11 +10,13 @@
             margin-left: 100px; 
             background-color: aqua;
             padding: 100px;
+            border:2px solid brown;
          }
          .second{color: rgb(236, 10, 21);
-            font-size: 25px;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-             margin: 0px 0px 0px 150px;
-             background-color: blue;
+            font-size: 1.5em;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+             background-color: rgb(137, 220, 20);
+             border-style:solid;
+             border-color: rgb(100, 0, 72);
 
          }
          .divcls{background-color: brown;
@@ -43,7 +45,7 @@ font-family: 'Saira Condensed', sans-serif; -->
     <h1 class="first">Welcome To My World</h1>
 
     <div class="one">
-        <h1 class="no">Move To Track</h1>
+        <h1 class="second">Move To Track</h1>
         <p class="third">Let's Start the Match</p>
      </div>
     
