--- a/task/task.html
+++ b/task/task.html
@@ -17,19 +17,19 @@ font-family: 'Saira Condensed', sans-serif; -->
         }
     
         .one{
-             background-color: brown;
-             padding: .5em;
-             font-size:large;margin-left: -1%; position:fixed;padding-right: 894px;
+             background-color: #f44336!important;
+             padding: .5em;width: 100%;
+             font-size:large;margin-left: -1%; position:fixed;padding-right: 894px;box-shadow: 0px 1px 3px #e33024!important;
         }
         a{
             text-decoration: none;color: white;
-            padding: .5em;}
+            padding: .5em;margin-left: -5px;}
             a:hover {
-  background-color:white;color: black;
+  background-color:white;color: black;left: 0 ;
 }
   
         .two {
-            background-color: brown;
+            background-color: #f44336!important;
             text-align: center;
             padding: 128px 16px;
             color: white;font-size: larger;
