--- a/forms.html
+++ b/forms.html
@@ -37,6 +37,14 @@
     </select>
     <br><br>
     <button type="submit">Submit</button>
+    <input type="text">
+
+    <input type="button"
+    value="submit">
+    <input type="date">
+    <input type="color">
+    <input type="file">
+    <input type="time">
 
 
 
