--- a/bootstrap/work3.html
+++ b/bootstrap/work3.html
@@ -9,57 +9,57 @@
 </head>
 <body>
     <div class="container">
-        <div class="row mt-2">
-            <div class="col-lg-2">
-                <div class="one">
+        <div class="row mx-2 mt-2">
+            <div class="col-lg-2 one">
+                <div class="">
                     <p>LOGO</p>
                 </div>
             </div>
-            <div class="col-lg-10">
-                <div class="two">
+            <div class="col-lg-10 two">
+                <div class="">
                     <p>Website Heading</p>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="three">
+        <div class="row mx-2">
+            <div class="col-lg-12 three">
+                <div class="">
                     <p>MENU</p>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="four">
+        <div class="row mx-2">
+            <div class="col-lg-4 four">
+                <div class="">
                     <p>SECTION 1</p>
                 </div>
             </div>
-            <div class="col-lg-4">
-                <div class="five">
+            <div class="col-lg-4 five">
+                <div class="">
                     <p>SECTION 2</p>
                 </div>
             </div>
-            <div class="col-lg-4">
-                <div class="six">
+            <div class="col-lg-4 six">
+                <div class="">
                     <p>SECTION 3</p>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-10">
-                <div class="seven">
+        <div class="row mx-2">
+            <div class="col-lg-10 seven">
+                <div class="">
                     <p>PAGE CONTENTS</p>
                 </div>
             </div>
-            <div class="col-lg-2">
-                <div class="eight">
-                    <p>SIDE BAR</p>
+            <div class="col-lg-2 eight">
+                <div class="">
+                    <p class="a">SIDE <p class="a">BAR</p> </p>
                 </div>
             </div>
         </div>
-        <div class="row mb-2">
-            <div class="col-lg-12">
-                <div class="nine">
+        <div class="row mx-2 mb-2">
+            <div class="col-lg-12 nine">
+                <div class="">
                     <p>PAGE FOOTER</p>
                 </div>
             </div>
