--- a/bootstrap/work5.html
+++ b/bootstrap/work5.html
@@ -19,7 +19,7 @@
                 <img class="e" src="../bootstrap/image/road.jpg" alt="">
             </div>
             <div class="col-lg c">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem corrupti a odit illo tempora molestiae quisquam esse soluta, voluptate nobis praesentium fuga nesciunt vero recusandae sequi quae, delectus perspiciatis officia.</p>
+                <p class="lol">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem corrupti a odit illo tempora molestiae quisquam esse soluta, voluptate nobis praesentium fuga nesciunt vero recusandae sequi quae, delectus perspiciatis officia.</p>
             </div>
             <div class="col-lg d me-3">
                 <img class="f" src="../bootstrap/image/road.jpg" alt="">
