--- a/bootstrap/work6.html
+++ b/bootstrap/work6.html
@@ -14,13 +14,13 @@
           <div class="col-lg "></div>
           <div class="col-lg-2 me-3 b "></div>
         </div>
-        <div class="row my-3 mt-5">
+        <div class="row my-5 mt-5">
             <div class="col-lg mx-3 my-3 c"></div>
         </div>
         <div class="row">
-            <div class="col-lg mx-5 d"></div>
-            <div class="col-lg mx-5 e"></div>
-            <div class="col-lg mx-5 f"></div>
+            <div class="col-lg d"></div>
+            <div class="col-lg e"></div>
+            <div class="col-lg f"></div>
         </div>
         <div class="row">
             <div class="col-lg mx-5 g text-center"><h1>Welcome</h1></div>
