--- a/bootstrap/work9.html
+++ b/bootstrap/work9.html
@@ -11,37 +11,46 @@
     <h1 class="a">About Us</h1>
     <p class="b">Lorem ipsum, dolor sit amet</p>
     <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
+        <div class="row my-5">
+            <div class="col-lg-6 my-5">
                 <h1 class="c">Our Vision</h1>
                 <p class="c">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, quis illo minima dolorem sequi adipisci. Molestias labore praesentium ea maxime odio ducimus sapiente repudiandae dicta. Recusandae cupiditate magnam harum enim!</p>
                 <p class="c">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto cupiditate nesciunt ut aspernatur omnis suscipit sunt, temporibus qui. Iure repellat quisquam nam quibusdam sapiente suscipit ducimus accusamus ipsa, obcaecati necessitatibus.</p>
                 <p class="c">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ad ut dolorum id libero, amet nostrum et harum voluptatibus blanditiis repellat beatae nisi, commodi non ducimus iure, rerum sapiente perferendis.</p>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 my-5">
                 <img class="d" src="../bootstrap/image/happy-manager-leads-a-meeting-in-the-office-scaled.jpg" alt="">
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 my-5">
                 <img class="e" src="../bootstrap/image/lovers-sitting-bench_1098-3608.avif" alt="">
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 my-5">
                 <h1 class="c">Our Approch</h1>
                 <p class="c">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero laudantium dicta nostrum. Dolorum pariatur sunt sequi quos suscipit reprehenderit at, blanditiis fugiat cupiditate omnis! At facere consectetur ipsam cupiditate. Cupiditate?</p>
                 <p class="c">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt provident illo atque laborum eaque! Quam molestias nulla temporibus. Dolorum reprehenderit dolor officiis voluptatibus illo nam exercitationem enim illum et quod.</p>
                 <p class="c">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non asperiores quod dolorem magni quisquam, nemo repudiandae adipisci earum labore! Numquam, aspernatur qui voluptate fugiat nulla quaerat cupiditate maiores quo fuga?</p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-6">
+        <div class="row my-5">
+            <div class="col-lg-6 my-5">
                 <h1 class="c">Our Process</h1>
                 <p class="c">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas quibusdam beatae, inventore alias cumque officia! Autem culpa, consequuntur explicabo quis quo velit asperiores. A, laborum repellendus. Nisi ex possimus labore!</p>
                 <p class="c">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem harum non doloremque distinctio odit cumque, consequuntur consequatur molestias repellendus sit perferendis veniam possimus nesciunt, eaque error placeat animi natus dignissimos!</p>
                 <p class="c">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae pariatur labore soluta exercitationem nostrum mollitia harum magnam dolores accusantium quo! Repudiandae, dignissimos fugit. Molestias maiores, numquam sapiente omnis sed reiciendis.</p>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 my-5">
                 <img class="f" src="../bootstrap/image/BK0020-bed-modern-bed-design-in-pakistan-Woodwoon-e1675682789185.webp" alt="">
+            </div>
+        </div>
+        <div class="row j my-5">
+            <div class="col-lg-6 pt-5">
+                <p class="g">Sign Up Now For Our Discount
+                    <p class="g">Product</p> </p>
+            </div>
+            <div class="col-lg-6 pb-4 pt-5">
+                    <input class="h" type="text" placeholder ="123@gmail.com"><button class="i">SUBSCRIBE</button><p>
             </div>
         </div>
     </div>
